--- a/app/css/style.css
+++ b/app/css/style.css
@@ -229,6 +229,12 @@ body{
   color: white;
 }
 
+.product-list-img {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+}
+
 
 @media (max-width: 800px) {
   .flex-container {
